--- a/styles/styles.css
+++ b/styles/styles.css
@@ -191,7 +191,7 @@
   --heading-font-size-xs: 1rem;
 
   /* ---- Layout ---- */
-  --max-content-width: 1200px;
+  --max-content-width: 1264px;
   --section-spacing: 2rem;
   --nav-height: 72px;
 
